--- a/build
+++ b/build
@@ -9,3 +9,7 @@ fi
 
 # The directory where this script exists.
 script_dir="$(dirname "$(readlink -f "$0")")"
+
+# Build amd64 linux base image.
+docker build -t gh-self:amd64-linux-base --build-arg RUNNER_VERSION=2.320.0 \
+    --build-arg GH_PLATFORM=x64 $script_dir/linux
