removed unnecessary steps.

--- a/linux/Dockerfile
+++ b/linux/Dockerfile
@@ -6,21 +6,11 @@ FROM debian:bookworm as download
 ARG RUNNER_VERSION="2.320.0"
 ARG GH_PLATFORM="x64"
 
-# Create a user for the runner
-RUN useradd -m github
-# Create home directory.
-RUN mkdir -p /home/github
-# Change the ownership of the directory to the runner user.
-RUN chown -R github:github /home/github
+WORKDIR /download
 
 # Download curl.
 RUN apt-get update
 RUN apt-get install -y curl
-
-WORKDIR /home/github
-
-# Switching to the github user.
-USER github
 
 # Download and extract the GitHub Actions runner bundle.
 RUN curl --retry 3 -o actions-runner-linux.tar.gz -L \
@@ -32,6 +22,6 @@ FROM alpine:latest as dist
 # Create home directory.
 RUN mkdir -p /home/github
 # Copy the bundle to dist.
-COPY --from=download /home/github/actions-runner-linux.tar.gz /home/github
+COPY --from=download /download/actions-runner-linux.tar.gz /home/github
 
 LABEL source_repository="https://github.com/aldhinn/gh-self"
